Game IDs are UUIDs
Games are not notionally in a scenario container.